--- a/Lab8.Rmd
+++ b/Lab8.Rmd
@@ -31,10 +31,13 @@ vars:
 Rank = the Socialblade rankings of the YouTube channel.
 Grade =  the grade of the YouTube channel as conferred by Socialblade.
 Channel name = The name of the YouTube channel.
-Video Uploads = Total number of videos uploaded by the YouTube channel.
+Uploads = Total number of videos uploaded by the YouTube channel.
 Subscribers = Total number of subscribers of the YouTube channel.
-Video views = Total number of views of all the video content by the YouTube channel.
+Views = Total number of views of all the video content by the YouTube channel.
 
+
+###Domain Expert
+Our domain expert is the CEO of YouTube, and he wants to know what factors are leading to certain YouTube channels becoming more successful based on Socialblade's rankings.  It is interesting to him what a major blogger company like Socialblade finds important in certain YouTube channels because he believes it influences the way users look at and evaluate channels.  He wants to know which channels he should focus his sponsorships towards in order to increase YouTube's overall success.  
 
 
 
